extends Node2D



func _on_button_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/Debug.tscn")
	pass # Replace with function body.


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/DeDog.tscn")


func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/DeSpook.tscn")
	pass # Replace with function body.



func _on_level_4_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/DeEggs.tscn")
	
	pass # Replace with function body.


func _on_level_11_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/alevel.tscn")
	
	pass # Replace with function body.


func _on_level_5_pressed() -> void:
	get_tree().change_scene_to_file("res://Levels/DeMaze.tscn")
	pass # Replace with function body.
